Fixed styling calculator alignment and initial button setup

--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
-.keypad .cell {
+body {
+    background-color: black;
+    padding-top: 75px;
+}
+
+.wrapper {
+    text-align: center;
+}
+
+.calculator {
+    display: inline-block;
+    background-color: rgb(74, 80, 94);
+    margin: 20px;
+    padding: 30px;
+}
+
+.screen {
+    display: block;
+    float: left;
+    width: 580px;
+    height: 100px;
+    background-color: rgb(0, 231, 75);
+    margin: 10px;
+}
+
+.cell {
     width: 100px;
     height: 100px;
     
@@ -30,20 +55,4 @@
 
 .special {
     background-color: rgb(255, 231, 34);
-}
-
-.screen {
-    display: block;
-    float: left;
-    width: 580px;
-    height: 100px;
-    background-color: rgb(0, 231, 75);
-    margin: 10px;
-}
-
-.calculator {
-    display: flex;
-    background-color: rgb(74, 80, 94);
-    margin: 20px;
-    padding: 20px;
 }
